# cpp-recognize-me

./: CMakeLists.txt
include/: CaptureDevice.hpp
src/: CaptureDevice.cpp  main.cpp
